src/test/resources/programs/invalid/lexer/UnclosedStringLiteral.kool
"asdasdas dasasd asdas // res: L2008